dependencies/kyverno/policy-base/.chainsaw-test/reduce-requests/build/resources/pod-build-not-to-mutate.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: build-pod
  labels:
    pipelines.appstudio.openshift.io/type: build
spec:
  containers:
  - image: bash
    name: build-pod
    resources: {}
