dependencies/kyverno/policy-base/.chainsaw-test/reduce-requests/build/resources/pod-build-to-mutate-mem.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: build-pod
  labels:
    pipelines.appstudio.openshift.io/type: build
spec:
  containers:
  - image: bash
    name: build-pod
    resources:
      requests:
        memory: "100Mi"
