dependencies/kyverno/policy-base/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: reduce-tekton-pr-taskrun-resource-requests
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
