dependencies/kyverno/policy-base/.chainsaw-test/reduce-requests/build/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-set-on-pod-build-mem
spec:
  description: |
    pod with suffix, build label, and a container with memory set is updated
  concurrent: false
  namespace: 'matching-pod-mem'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../../../../kyverno-rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../../../reduce-tekton-pr-taskrun-resource-requests.yaml
    - assert:
        file: ../../chainsaw-assert-clusterpolicy.yaml
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-build-to-mutate-mem.yaml
  - name: then-pod-is-mutated
    try:
    - assert:
        file: resources/pod-build-mutated.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-set-on-pod-build-cpu
spec:
  description: |
    pod with suffix, build label, and a container with cpu set is updated
  concurrent: false
  namespace: 'matching-pod-cpu'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../../../../kyverno-rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../../../reduce-tekton-pr-taskrun-resource-requests.yaml
    - assert:
        file: ../../chainsaw-assert-clusterpolicy.yaml
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-build-to-mutate-cpu.yaml
  - name: then-pod-is-mutated
    try:
    - assert:
        file: resources/pod-build-mutated.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-not-set-on-pod-enterprise-without-resources
spec:
  description: |
    pod with suffix, build label, and no container with cpu or memory set is not updated
  concurrent: false
  namespace: 'not-matching-pod'
  steps:
  - name: given-kyverno-has-permission-on-resources
    try:
    - apply:
        file: ../../../../kyverno-rbac.yaml
  - name: given-cluster-policy-is-ready
    try:
    - apply:
        file: ../../../reduce-tekton-pr-taskrun-resource-requests.yaml
    - assert:
        file: ../../chainsaw-assert-clusterpolicy.yaml
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-build-not-to-mutate.yaml
  - name: then-pod-is-not-mutated
    try:
    - assert:
        file: resources/pod-build-not-to-mutate.yaml
---
